# tinyusb

./: CMakeLists.txt  Kconfig  idf_component.yml
.github/workflows/: build_idf_examples.yml  upload_component.yml
examples/: rules.mk
examples/device/board_test/: CMakeLists.txt
examples/device/board_test/src/: CMakeLists.txt  main.c
examples/device/cdc_msc_freertos/: CMakeLists.txt
examples/device/cdc_msc_freertos/src/: CMakeLists.txt  main.c
examples/device/hid_composite_freertos/: CMakeLists.txt
examples/device/hid_composite_freertos/src/: CMakeLists.txt  main.c
hw/bsp/: board_mcu.h
hw/bsp/esp32s2_kaluga_1/: board.mk
hw/bsp/esp32s2_saola_1/: board.mk
hw/bsp/esp32s3_addax_1/: CMakeLists.txt  board.mk  esp32s3_addax_1.c
hw/bsp/esp32s_custom/: CMakeLists.txt  board.mk  esp32s_custom.c
src/: tusb_option.h
src/class/net/: ncm_device.c  net_device.h
src/portable/espressif/esp32sx/: dcd_esp32sx.c
src/portable/synopsys/dwc2/: dcd_dwc2.c  dwc2_esp32.h
